--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,20 @@
-# Core dependencies for MAS AML/CFT Document Crawler
-requests==2.31.0
-beautifulsoup4==4.12.2
-pydantic==2.5.0
-python-dateutil==2.8.2
-
-# Testing dependencies
-pytest==7.4.3
-pytest-cov==4.1.0
-pytest-mock==3.12.0
-
-# FastAPI dependencies
+# FastAPI and server
 fastapi==0.104.1
-uvicorn==0.24.0
+uvicorn[standard]==0.24.0
 
-# Development tools
-ruff==0.1.6
-mypy==1.7.0
+# Data validation and settings
+pydantic==2.5.0
+pydantic-settings==2.1.0
+
+# Data processing
+pandas==2.1.3
+
+# LangGraph for agent orchestration
+langgraph==0.0.25
+
+# HTTP client for Grok API
+httpx==0.25.1
+
+# Testing
+pytest==7.4.3
+pytest-asyncio==0.21.1
