--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,7 +7,7 @@ pydantic==2.5.0
 pydantic-settings==2.1.0
 
 # Data processing
-pandas==2.1.3
+pandas==2.2.0
 
 # LangGraph for agent orchestration
 langgraph==0.0.25
@@ -18,3 +18,5 @@ httpx==0.25.1
 # Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
+
+numpy==1.26.4
